--- a/AbacusAPI/AbacusAPI.Services.csproj
+++ b/AbacusAPI/AbacusAPI.Services.csproj
@@ -61,7 +61,9 @@
   <ItemGroup>
     <Content Include="OrdersService.svc" />
     <Content Include="SchoolsService.svc" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IOrdersService.cs" />
